[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Scenes/Visualiseur/Visualiseur.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Viewer/Viewer.tscn" type="PackedScene" id=2]

[node name="Visualiseur" type="Node2D"]
script = ExtResource( 1 )

[node name="Viewer" parent="." instance=ExtResource( 2 )]

[node name="Menu" type="ColorRect" parent="."]
margin_left = 800.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_right = 224.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Import" type="Button" parent="Menu/VBoxContainer"]
margin_right = 224.0
margin_bottom = 20.0
text = "Importer"

[node name="Back to main menu" type="Button" parent="Menu/VBoxContainer"]
anchor_top = 0.916
anchor_bottom = 0.916
margin_top = 24.0
margin_right = 224.0
margin_bottom = 44.0
text = "Back to main menu"

[node name="Popups" type="Node" parent="."]

[node name="ImportDialog" type="FileDialog" parent="Popups"]
margin_right = 622.0
margin_bottom = 338.0
popup_exclusive = true
window_title = "Ouvrir un fichier"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )

[connection signal="bg_drag" from="Viewer" to="." method="_on_Viewer_bg_drag"]
[connection signal="bg_left_click" from="Viewer" to="." method="_on_Viewer_bg_left_click"]
[connection signal="bg_right_click" from="Viewer" to="." method="_on_Viewer_bg_right_click"]
[connection signal="pressed" from="Menu/VBoxContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Back to main menu" to="." method="_on_Back_to_main_menu_pressed"]
[connection signal="about_to_show" from="Popups/ImportDialog" to="." method="_on_ImportDialog_about_to_show"]
[connection signal="file_selected" from="Popups/ImportDialog" to="." method="_on_ImportDialog_file_selected"]
[connection signal="popup_hide" from="Popups/ImportDialog" to="." method="_on_ImportDialog_popup_hide"]
